7. k8s-hw/hw-05/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: netology
spec:
  selector:
    app: backend
  ports:
  - port: 8080
    targetPort: 8080
