7. k8s-hw/hw-05/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: netology
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
